# competition_submission

./: .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  quickstart.ipynb  requirements.txt
.github/workflows/: pylint.yml  pypi.yml
cfg_files/: cfg.yml
lib/: delegate.py  submitter.py
lib/core_tools/: contracts.py  tools.py
lib/core_tools/json_interfaces/: Competition.json  Token.json
yiedl/: __init__.py  contracts.py  delegate.py  settings.py  submitter.py  tools.py
yiedl/core_tools/: contracts.py  tools.py
yiedl/json_interfaces/: Competition.json
