[project]
name = "yiedl-ai"
version = "0.2.1"
description = "Programmaticaly interact with the yiedl machine learning competition"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "base58>=2.1.1",
    "requests>=2.32.3",
    "web3>=7.7.0",
    "pandas>=2.2.3",
]
[project.optional-dependencies]
test = ["pylint"]

[project.urls]
Repository = "https://github.com/rocketcapital-ai/competition_submission"
Documentation = "https://docs.yiedl.ai/rci-competition"
Changelog = "https://github.com/rocketcapital-ai/competition_submission/CHANGELOG.md"
Releases = "https://github.com/rocketcapital-ai/competition_submission/releases"
Discord = "https://discord.com/invite/r6NbnCSrzn"

[tool.setuptools]
packages = ["yiedl"]
include-package-data = true

[tool.setuptools.package-data]
'yiedl' = ['json_interfaces/*.json']
